--- a/index.html
+++ b/index.html
@@ -1,1 +1,22 @@
-<H1>Foo</H1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>ANINA SHUFFLE</title>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+</head>
+<body>
+
+<div class="container">
+  <h3>ANINA SHUFFLE</h3>
+  <p>Shuffle tunnit pääkaupunkiseudulla</p>
+  <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. 
+    Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. 
+    Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
+</div>
+
+</body>
+</html>
