--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
 
-<div class="container">
+  <div class="container text-center">
   <h3>ANINA SHUFFLE</h3>
   <p>Shuffle tunnit pääkaupunkiseudulla</p>
   <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. 
