--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
     Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. 
     Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
 </div>
+   <div class="row">
+    <div class="col-sm-6">
+      <p><strong>ALKEET</strong></p><br>
+      <img src="https://unsplash.com/photos/3ckWUnaCxzc" alt="Random Name">
+    </div>
+    <div class="col-sm-6">
+      <p><strong>ALKEISJATKO</strong></p><br>
+      <img src="bandmember.jpg" alt="Random Name">
+    </div>
+ 
 
 </body>
 </html>
