--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
    <div class="row">
     <div class="col-sm-6">
       <p><strong>ALKEET</strong></p><br>
-      <img src="https://unsplash.com/photos/3ckWUnaCxzc" alt="Random Name">
+      <img src="https://unsplash.com/photos/3ckWUnaCxzc" alt="alkeetkuva">
+ 
     </div>
     <div class="col-sm-6">
       <p><strong>ALKEISJATKO</strong></p><br>
