--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
    <div class="row">
     <div class="col-sm-6">
       <p><strong>ALKEET</strong></p><br>
-      <img src="https://unsplash.com/photos/3ckWUnaCxzc" alt="alkeetkuva">
+      <img src="https://images.unsplash.com/photo-1628257085290-ae03238037c2?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="alkeetkuva">
  
     </div>
     <div class="col-sm-6">
