--- a/testi.html
+++ b/testi.html
@@ -263,7 +263,7 @@
   <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
-  <p> 2021 Anina Luumi Shuffle / Ota yhteyttä anina.ikonen@live.com> </p> 
+  <p> 2021 Anina Luumi Shuffle / Ota yhteyttä anina.ikonen@live.com </p> 
 </footer>
 
 <script>
