--- a/testi.html
+++ b/testi.html
@@ -48,6 +48,9 @@
 
     <div class="carousel-inner" role="listbox">
       <div class="item active">
+     <video width="1200" height="700" autoplay muted>
+  <source src="VID-20211205-WA0000.mp4" type="video/mp4" >
+</video>
         <img src="ny.jpg" alt="New York" width="1200" height="700">
         <div class="carousel-caption">
           <h3>Haluatko oppia shufflaamaan?</h3>
