--- a/testi.html
+++ b/testi.html
@@ -74,7 +74,6 @@
       </div>
     </div>
 
-    <!-- Left and right controls -->
     <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
       <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
       <span class="sr-only">Previous</span>
@@ -85,11 +84,10 @@
     </a>
 </div>
 
-<!-- Container (The Band Section) -->
 <div id="band" class="container text-center">
-  <h3>THE BAND</h3>
+  <h3>ANINAN SHUFFLE TUNNIT</h3>
   <p><em>We love music!</em></p>
-  <p>We have created a fictional band website. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+  <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
   <br>
   <div class="row">
     <div class="col-sm-4">
