--- a/testi.html
+++ b/testi.html
@@ -86,7 +86,7 @@
 
 <div id="band" class="container text-center">
   <h3>ANINAN SHUFFLE TUNNIT</h3>
-  <p><em>We love music!</em></p>
+  <p><em>We love shuffle!</em></p>
   <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
   <br>
   <div class="row">
