--- a/testi.html
+++ b/testi.html
@@ -91,7 +91,7 @@
   <br>
   <div class="row">
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>ALKEET</strong></p><br>
       <a href="#demo" data-toggle="collapse">
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>ALKEISJATKO</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
@@ -113,7 +113,7 @@
       </div>
     </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>EDISTYNEET</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
@@ -125,8 +125,7 @@
     </div>
   </div>
 </div>
-
-<!-- Container (TOUR Section) -->
+  
 <div id="tour" class="bg-1">
   <div class="container">
     <h3 class="text-center">TOUR DATES</h3>
