--- a/testi.html
+++ b/testi.html
@@ -96,9 +96,9 @@
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
-        <p>Guitarist and Lead Vocalist</p>
-        <p>Loves long walks on the beach</p>
-        <p>Member since 1988</p>
+        <p>Shuffletanssin alkeiskurssilla harjoitellaan shuffletanssin</p>
+        <p> perusliikkeitä sekä koreografoita opituista liikkeistä.</p> 
+        <p> Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
       </div>
     </div>
     <div class="col-sm-4">
