--- a/testi.html
+++ b/testi.html
@@ -96,9 +96,9 @@
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo" class="collapse">
-        <p>Shuffletanssin alkeiskurssilla harjoitellaan shuffletanssin</p>
-        <p> perusliikkeitä sekä koreografoita opituista liikkeistä.</p> 
-        <p> Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
+        <p>Shuffletanssin alkeiskurssilla harjoitellaan shuffletanssin
+       perusliikkeitä sekä koreografoita opituista liikkeistä.
+        Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
       </div>
     </div>
     <div class="col-sm-4">
