--- a/testi.html
+++ b/testi.html
@@ -208,9 +208,9 @@
   <div class="row">
     <div class="col-md-4">
       <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chicago, US</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Phone: +00 1515151515</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Email: mail@mail.com</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Chica1go, US</p>
+      <p><span class="glyphicon glyphicon-phone"></span>Puhelinnumero: 044 981 7413</p>
+      <p><span class="glyphicon glyphicon-envelope"></span>Sähköposti: anina.Ikonen@live.com</p>
     </div>
     <div class="col-md-8">
       <div class="row">
