--- a/testi.html
+++ b/testi.html
@@ -97,8 +97,8 @@
       </a>
       <div id="demo" class="collapse">
         <p>Shuffletanssin alkeiskurssilla harjoitellaan shuffletanssin
-       perusliikkeitä sekä koreografoita opituista liikkeistä.
-        Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
+          perusliikkeitä sekä koreografoita opituista liikkeistä. </p>
+       <p>Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
       </div>
     </div>
     <div class="col-sm-4">
