--- a/testi.html
+++ b/testi.html
@@ -107,9 +107,9 @@
         <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
-        <p>Drummer</p>
-        <p>Loves drummin'</p>
-        <p>Member since 1988</p>
+        <p>Shuffletanssin alkeisjatkokurssilla opetellaan uusia liikkeitä ja 
+          harjoitellaan koregrafiota hieman nopeampaan tempoon. <p/>
+        <p>Osallistuessasi tunnille sinun tulisi osata Running Man, T-step ja Charleston kertaamatta.</p>
       </div>
     </div>
     <div class="col-sm-4">
