--- a/testi.html
+++ b/testi.html
@@ -207,25 +207,25 @@
 
   <div class="row">
     <div class="col-md-4">
-      <p>Fan? Drop a note.</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Chica1go, US</p>
+      <p>Yhteystiedot</p>
+      <p><span class="glyphicon glyphicon-map-marker"></span>Teollisuuskatu 18a, 00510 Helsinki</p>
       <p><span class="glyphicon glyphicon-phone"></span>Puhelinnumero: 044 981 7413</p>
       <p><span class="glyphicon glyphicon-envelope"></span>Sähköposti: anina.Ikonen@live.com</p>
     </div>
     <div class="col-md-8">
       <div class="row">
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="name" name="name" placeholder="Name" type="text" required>
+          <input class="form-control" id="Nimi" name="Nimi" placeholder="Nimi" type="text" required>
         </div>
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Email" type="email" required>
+          <input class="form-control" id="Sähköposti" name="Sähköposti" placeholder="Sähköposti" type="Sähköposti" required>
         </div>
       </div>
       <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
       <br>
       <div class="row">
         <div class="col-md-12 form-group">
-          <button class="btn pull-right" type="submit">Send</button>
+          <button class="btn pull-right" type="submit">Ilmottaudu</button>
         </div>
       </div>
     </div>
