--- a/testi.html
+++ b/testi.html
@@ -104,7 +104,7 @@
     <div class="col-sm-4">
       <p class="text-center"><strong>ALKEISJATKO</strong></p><br>
       <a href="#demo2" data-toggle="collapse">
-        <img src="bandmember.jpg" class="img-circle person" alt="Random Name" width="255" height="255">
+        <img src="https://images.unsplash.com/photo-1523450001312-faa4e2e37f0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo2" class="collapse">
         <p>Shuffletanssin alkeisjatkokurssilla opetellaan uusia liikkeitä ja 
