--- a/testi.html
+++ b/testi.html
@@ -111,16 +111,15 @@
           harjoitellaan koregrafiota hieman nopeampaan tempoon. <p/>
         <p>Osallistuessasi tunnille sinun tulisi osata Running Man, T-step ja Charleston kertaamatta.</p>
       </div>
-    </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>EDISTYNEET</strong></p><br>
-      <a href="#demo3" data-toggle="collapse">
-        <img src="https://images.unsplash.com/photo-1546427660-eb346c344ba5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" alt="Random Name" width="255" height="255">
+      <p class="text-center"><strong>ALKEISJATKO</strong></p><br>
+      <a href="#demo2" data-toggle="collapse">
+        <img src="https://images.unsplash.com/photo-1523450001312-faa4e2e37f0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
-      <div id="demo3" class="collapse">
-        <p>Bass player</p>
-        <p>Loves math</p>
-        <p>Member since 2005</p>
+      <div id="demo2" class="collapse">
+        <p>Shuffletanssin alkeisjatkokurssilla opetellaan uusia liikkeitä ja 
+          harjoitellaan koregrafiota hieman nopeampaan tempoon. <p/>
+        <p>Osallistuessasi tunnille sinun tulisi osata Running Man, T-step ja Charleston kertaamatta.</p>
       </div>
     </div>
   </div>
