--- a/testi.html
+++ b/testi.html
@@ -199,10 +199,9 @@
   </div>
 </div>
 
-<!-- Container (Contact Section) -->
 <div id="contact" class="container">
-  <h3 class="text-center">Contact</h3>
-  <p class="text-center"><em>We love our fans!</em></p>
+  <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
+  <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla!</em></p>
 
   <div class="row">
     <div class="col-md-4">
