--- a/testi.html
+++ b/testi.html
@@ -128,8 +128,13 @@
   
 <div id="tour" class="bg-1">
   <div class="container">
-    <h3 class="text-center">TOUR DATES</h3>
-    <p class="text-center">Lorem ipsum we'll play you some music.<br> Remember to book your tickets!</p>
+    <h3 class="text-center">TIETOA MINUSTA</h3>
+    <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
+      Minulla on laaja urheilutausta ja nautin lajeista, joissa joutuu haastamaan itseään.
+      Oon harrastanut erilaisia tansseja baletista discotanssiin, sekä myös cheerleadingia.
+     Lähivuosina olen keskittynyt treenaamaan aktiivisesti Shuffletanssia ja Brasilialaista jujutsua. 
+      Ensimmäistä kertaa kokeilin shufflea vuonna 2019, ja se oli rakkautta ensi silmäyksellä. Shufflessa ihastuin sen vauhdikkuuteen ja tekniseen haastavuuteen.
+      Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p>
 
   <!-- Modal -->
   <div class="modal fade" id="myModal" role="dialog">
