--- a/testi.html
+++ b/testi.html
@@ -28,7 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#myPage">ETUSIVU</a></li>
         <li><a href="#band">TUNNIT</a></li>
-        <li><a href="#tour">TIETOA OPETTAJASTA</a></li>
+        <li><a href="#tour">TIETOA MINUSTA</a></li>
         <li><a href="#contact">YHTEYSTIEDOT</a></li>
         </li>
       
