--- a/testi.html
+++ b/testi.html
@@ -174,7 +174,7 @@
 
 <div id="contact" class="container">
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
-  <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! Ilmottautumisen jälkeen saat laskun sähköpostiin. Lasku tulee olla maksettuna ennen ensimmäsitä tuntia</em></p>
+  <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
 
   <div class="row">
     <div class="col-md-4">
