--- a/index.html
+++ b/index.html
@@ -113,14 +113,13 @@
       </div>
       </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>Name</strong></p><br>
+      <p class="text-center"><strong>WORKSHOPIT</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="https://images.unsplash.com/photo-1592252002485-f269690b2ef1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
       <div id="demo3" class="collapse">
-        <p>Bass player</p>
-        <p>Loves math</p>
-        <p>Member since 2005</p>
+        <p>Keskitasolla pärjäät, jos osaat perusaskeleet ilman niiden kertausta ja nopealla temmolla. 
+          Kurssilla käydään läpi uusia askelsarjoja, sekä nopeatempoisempi koreografia.</p>
       </div>
     </div>
   </div>
