--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
       </div>
       </div>
     <div class="col-sm-4">
-      <p class="text-center"><strong>WORKSHOPIT</strong></p><br>
+      <p class="text-center"><strong>KESKITASO</strong></p><br>
       <a href="#demo3" data-toggle="collapse">
         <img src="https://images.unsplash.com/photo-1592252002485-f269690b2ef1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
       </a>
