--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
       </div>
 
       <div class="item">
-        <img src="chicago.jpg" alt="Chicago" width="1200" height="700">
+         <video width="1200" height="700" autoplay muted>
+  <source src="VID_66720603_154145_421.mp4" type="video/mp4" >
+</video>
         <div class="carousel-caption">
           <h3>Chicago</h3>
           <p>Thank you, Chicago - A night we won't forget.</p>
