--- a/index.html
+++ b/index.html
@@ -62,8 +62,11 @@
   <source src="VID_66720603_154145_421.mp4" type="video/mp4" >
 </video>
         <div class="carousel-caption">
-          <h3>Chicago</h3>
-          <p>Thank you, Chicago - A night we won't forget.</p>
+          <h3>ALKEISTUNNIT</h3>
+          <p>"“Minulla ei ollut ollenkaan tanssitaustaa aikaisemmin, joten jännitti tulla ensimmäiselle tunnille. 
+            Kuitenkin jännitys hälveni heti, sillä tunneilla oli rento ja kannustava ilmapiiri. 
+            Opettaja oli selkeä ja porukka kivaa. Löysin vihdoin aikuisiällä harrastuksen! Kiitos Anina”
+</p>
         </div>      
       </div>
     
