--- a/index.html
+++ b/index.html
@@ -73,8 +73,9 @@
       <div class="item">
         <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
         <div class="carousel-caption">
-          <h3>LA</h3>
-          <p>Even though the traffic was a mess, we had the best time playing at Venice Beach!</p>
+          <h3>ALKEISJATKO TUNNIT</h3>
+          <p>Jatkoin alkeitten jälkeen alkeisjatko tunnille. 
+            Edelleen yhtä kivaa kuin alussa. Koreokrafiat vaihtuvat ja pystyvät mielekkäinä! Opettaja on huippu ja tunnit ovat viikon kohokohta!"</p>
         </div>      
       </div>
     </div>
