--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
         <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
         <div class="carousel-caption">
           <h3>ALKEISJATKO TUNNIT</h3>
-          <p>Jatkoin alkeitten jälkeen alkeisjatko tunnille. 
-            Edelleen yhtä kivaa kuin alussa. Koreokrafiat vaihtuvat ja pystyvät mielekkäinä! Opettaja on huippu ja tunnit ovat viikon kohokohta!"</p>
+          <p>"Jatkoin alkeitten jälkeen alkeisjatko tunnille. Edelleen yhtä kivaa kuin alussa. </p>
+           <p> Koreokrafiat vaihtuvat ja pystyvät mielekkäinä! Opettaja on huippu ja tunnit ovat viikon kohokohta!"</p>
         </div>      
       </div>
     </div>
