--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
       </div>
     
       <div class="item">
-        <img src="la.jpg" alt="Los Angeles" width="1200" height="700">
+        <img src="lhttps://images.unsplash.com/photo-1466554934129-f71df54ebb27?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" alt="Los Angeles" width="1200" height="700">
         <div class="carousel-caption">
           <h3>ALKEISJATKO TUNNIT</h3>
           <p>"Jatkoin alkeitten jälkeen alkeisjatko tunnille. Edelleen yhtä kivaa kuin alussa. </p>
