--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         </div>      
       </div>
     
-      <div class="item">
+      <div class="item"> <img width="1500" height="700">
         <img src="https://images.unsplash.com/photo-1466554934129-f71df54ebb27?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" 
              alt="Los Angeles" width="1200" height="500">
         <div class="carousel-caption">
