--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
   
 </head>
-<body id="myPage" data-spy="scroll" data-target=".navbar" data-offset="50">
+<body id="Etusivu" data-spy="scroll" data-target=".navbar" data-offset="50">
 
 <nav class="navbar navbar-default navbar-fixed-top">
   <div class="container-fluid">
@@ -22,11 +22,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#myPage">Logo</a>
+      <a class="navbar-brand" href="#Etusivu">Logo</a>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#myPage">ETUSIVU</a></li>
+        <li><a href="#Etusivu">ETUSIVU</a></li>
         <li><a href="#band">TUNNIT</a></li>
         <li><a href="#tour">TIETOA MINUSTA</a></li>
         <li><a href="#contact">YHTEYSTIEDOT</a></li>
@@ -220,7 +220,7 @@
 
 
 <footer class="text-center">
-  <a class="up-arrow" href="#myPage" data-toggle="tooltip" title="TO TOP">
+  <a class="up-arrow" href="#Etusivu" data-toggle="tooltip" title="TO TOP">
     <span class="glyphicon glyphicon-chevron-up"></span>
   </a><br><br>
   <p> 2021 Anina Luumi Shuffle / Ota yhteyttä anina.ikonen@live.com </p> 
