--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="#Etusivu">ETUSIVU</a></li>
         <li><a href="#band">TUNNIT</a></li>
         <li><a href="#tour">TIETOA MINUSTA</a></li>
-        <li><a href="#contact">YHTEYSTIEDOT</a></li>
+        <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>
         </li>
       
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
@@ -185,7 +185,7 @@
   </div>
 </div>
 
-<div id="contact" class="container">
+<div id="Yhteystiedot" class="container">
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
 
