--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#Etusivu">ETUSIVU</a></li>
-        <li><a href="#band">TUNNIT</a></li>
+        <li><a href="#Tunnit">TUNNIT</a></li>
         <li><a href="#tour">TIETOA MINUSTA</a></li>
         <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>
         </li>
@@ -92,7 +92,7 @@
     </a>
 </div>
 
-<div id="band" class="container text-center">
+<div id="Tunnit" class="container text-center">
   <h3>ANINAN SHUFFLE TUNNIT</h3>
   <p><em>We love shuffle!</em></p>
   <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
