--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#Etusivu">ETUSIVU</a></li>
         <li><a href="#Tunnit">TUNNIT</a></li>
-        <li><a href="#tour">TIETOA MINUSTA</a></li>
+        <li><a href="#Tietoaminusta">TIETOA MINUSTA</a></li>
         <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>
         </li>
       
@@ -133,7 +133,7 @@
   </div>
 </div>
   
-<div id="tour" class="bg-1">
+<div id="Tietoaminusta" class="bg-1">
   <div class="container">
     <h3 class="text-center">TIETOA MINUSTA</h3>
     <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
