--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fi">
 <head>
   <title>Anina Shuffle</title>
   <meta charset="utf-8">
@@ -30,15 +30,13 @@
         <li><a href="#Tunnit">TUNNIT</a></li>
         <li><a href="#Tietoaminusta">TIETOA MINUSTA</a></li>
         <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>
-        </li>
-      
         <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
 </nav>
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" width="1200" height="700">
+<div id="myCarousel" class="carousel slide" data-ride="carousel" >
 
     <ol class="carousel-indicators">
       <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
