--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
   </div>
 </div>
 
-<div id="Yhteystiedot" class="container">
+<div id="Yhteystiedot" class="container"> </div>
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
 
