--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
           <input class="form-control" id="Nimi" name="Nimi" placeholder="Nimi" type="text" required>
         </div>
         <div class="col-sm-6 form-group">
-          <input class="form-control" id="Sähköposti" name="Sähköposti" placeholder="Sähköposti" type="Sähköposti" required>
+          <input class="form-control" id="email" name="email" placeholder="email" type="email" required>
         </div>
       </div>
       <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
