--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       </a>
       <div id="demo2" class="collapse">
         <p>Shuffletanssin alkeisjatkokurssilla opetellaan uusia liikkeitä ja 
-          harjoitellaan koregrafiota hieman nopeampaan tempoon. <p/>
+          harjoitellaan koregrafiota hieman nopeampaan tempoon. </p>
         <p>Osallistuessasi tunnille sinun tulisi osata Running Man, T-step ja Charleston kertaamatta.</p>
       </div>
       </div>
