--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
       </div>
       <div class="item">
          <video width="1500" height="700" autoplay muted>
-  <source src="YouCut_20211205_121546758(2).mp4" type="video/mp4">
+  <source src="YouCut_20211205_121546758.mp4" type="video/mp4">
 </video>
 
         <div class="carousel-caption">
