--- a/indextoinen.html
+++ b/indextoinen.html
@@ -146,7 +146,7 @@
         </div>      
       </div>
         </div>
-<div id="Yhteystiedot" class="container"> </div>
+<div id="Yhteystiedot" class="bg-1"> </div>
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
 
