--- a/indextoinen.html
+++ b/indextoinen.html
@@ -130,7 +130,7 @@
   </div>
 </div>
   
-<div id="Tietoaminusta" class="bg-1">
+<div id="tietoaminusta" class="bg-1">
   <div class="container">
     <h3 class="text-center">TIETOA MINUSTA</h3>
     <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
