--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#Etusivu">ETUSIVU</a></li>
         <li><a href="#Tunnit">TUNNIT</a></li>
-        <li><a href="#Tietoaminusta">TIETOA MINUSTA</a></li>
+        <li><a href="#tietoaminusta">TIETOA MINUSTA</a></li>
         <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>
-        <li><a href="#"><span class="glyphicon glyphicon-search"></span></a></li>
       </ul>
     </div>
   </div>
@@ -131,7 +130,7 @@
   </div>
 </div>
   
-<div id="Tietoaminusta" class="bg-1">
+<div id="tietoaminusta" class="bg-1">
   <div class="container">
     <h3 class="text-center">TIETOA MINUSTA</h3>
     <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
@@ -147,7 +146,7 @@
         </div>      
       </div>
         </div>
-<div id="Yhteystiedot" class="container"> </div>
+<div id="Yhteystiedot" class="bg-1"> </div>
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
 
