--- a/indextoinen.html
+++ b/indextoinen.html
@@ -45,9 +45,8 @@
 
     <div class="carousel-inner" role="listbox">
       <div class="item active">
-     <video width="1500" height="700" autoplay muted>
-  <source src="VID-20211205-WA0000.mp4" type="video/mp4" >
-</video>
+         <img src="https://images.unsplash.com/photo-1553570739-330b8db8a925?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80"  >
+
  <div class="carousel-caption">
           <h3>Haluatko oppia shufflaamaan?</h3>
           <p>Shuffletunnit Helsingissä ja Vantaalla</p>
