--- a/indextoinen.html
+++ b/indextoinen.html
@@ -53,9 +53,7 @@
       </div>
 
       <div class="item">
-         <video width="1500" height="700" autoplay muted>
-  <source src="VID_66720603_154145_421.mp4" type="video/mp4">
-</video>
+   <img src="https://images.unsplash.com/photo-1535525153412-5a42439a210d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
         <div class="carousel-caption">
           <h3>ALKEISTUNNIT</h3>
           <p>"“Minulla ei ollut ollenkaan tanssitaustaa aikaisemmin, joten jännitti tulla ensimmäiselle tunnille. 
@@ -65,9 +63,7 @@
         </div>      
       </div>
       <div class="item">
-         <video width="1500" height="700" autoplay muted>
-  <source src="YouCut_20211205_121546758.mp4" type="video/mp4">
-</video>
+      <img src="https://images.unsplash.com/photo-1621976360623-004223992275?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1128&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
 
         <div class="carousel-caption">
           <h3>ALKEISJATKO TUNNIT</h3>
