--- a/tunnit.html
+++ b/tunnit.html
@@ -26,10 +26,10 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#Etusivu">ETUSIVU</a></li>
+        <li><a href="indextoinen.html">ETUSIVU</a></li>
         <li><a href="#Tunnit">TUNNIT</a></li>
         <li><a href="#tietoaminusta">TIETOA MINUSTA</a></li>
-        <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>
+        <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>   
       </ul>
     </div>
   </div>
