--- a/tunnit.html
+++ b/tunnit.html
@@ -28,7 +28,7 @@
       <ul class="nav navbar-nav navbar-right">
         <li><a href="indextoinen.html">ETUSIVU</a></li>
         <li><a href="#Tunnit">TUNNIT</a></li>
-        <li><a href="#tietoaminusta">TIETOA MINUSTA</a></li>
+        <li><a href="tietoaminusta.html">TIETOA MINUSTA</a></li>
         <li><a href="#Yhteystiedot">YHTEYSTIEDOT</a></li>   
       </ul>
     </div>
