--- a/indextoinen.html
+++ b/indextoinen.html
@@ -132,9 +132,7 @@
       Oon harrastanut erilaisia tansseja baletista discotanssiin, sekä myös cheerleadingia.
      Lähivuosina olen keskittynyt treenaamaan aktiivisesti Shuffletanssia ja Brasilialaista jujutsua. 
       Ensimmäistä kertaa kokeilin shufflea vuonna 2019, ja se oli rakkautta ensi silmäyksellä. Shufflessa ihastuin sen vauhdikkuuteen ja tekniseen haastavuuteen.
-      Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p>
-
-        </div>
+      Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p> </div>
 <div id="Yhteystiedot" class="bg-1"> </div>
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
