--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </ol>
 
     <div class="carousel-inner" role="listbox">
-      <div class="item active">
+      <iframe class="embed-responsive-item"
      <video width="1500" height="700" autoplay muted>
   <source src="VID-20211205-WA0000.mp4" type="video/mp4" >
 </video>
@@ -54,7 +54,7 @@
         </div>      
       </div>
 
-      <div class="item">
+       <iframe class="embed-responsive-item"
          <video width="1500" height="700" autoplay muted>
   <source src="VID_66720603_154145_421.mp4" type="video/mp4">
 </video>
@@ -66,7 +66,7 @@
 </p>
         </div>      
       </div>
-      <div class="item">
+      <iframe class="embed-responsive-item"
          <video width="1500" height="700" autoplay muted>
   <source src="YouCut_20211205_121546758.mp4" type="video/mp4">
 </video>
