--- a/indextoinen.html
+++ b/indextoinen.html
@@ -127,7 +127,7 @@
 <div id="tietoaminusta" class="bg-1">
   <div class="container">
     <h3 class="text-center">TIETOA MINUSTA</h3>
-    <p class="text-right">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
+    <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
       Minulla on laaja urheilutausta ja nautin lajeista, joissa joutuu haastamaan itseään.
       Oon harrastanut erilaisia tansseja baletista discotanssiin, sekä myös cheerleadingia.
      Lähivuosina olen keskittynyt treenaamaan aktiivisesti Shuffletanssia ja Brasilialaista jujutsua. 
