--- a/indextoinen.html
+++ b/indextoinen.html
@@ -126,6 +126,10 @@
   
 <div id="tietoaminusta" class="bg-1">
   <div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+    </div>
+    <div class="col-sm-6">
     <h3 class="text-center">TIETOA MINUSTA</h3>
     <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
       Minulla on laaja urheilutausta ja nautin lajeista, joissa joutuu haastamaan itseään.
@@ -133,6 +137,7 @@
      Lähivuosina olen keskittynyt treenaamaan aktiivisesti Shuffletanssia ja Brasilialaista jujutsua. 
       Ensimmäistä kertaa kokeilin shufflea vuonna 2019, ja se oli rakkautta ensi silmäyksellä. Shufflessa ihastuin sen vauhdikkuuteen ja tekniseen haastavuuteen.
       Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p> </div>
+    </div>
 <div id="Yhteystiedot" class="bg-1"> </div>
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
