--- a/indextoinen.html
+++ b/indextoinen.html
@@ -138,6 +138,8 @@
       Ensimmäistä kertaa kokeilin shufflea vuonna 2019, ja se oli rakkautta ensi silmäyksellä. Shufflessa ihastuin sen vauhdikkuuteen ja tekniseen haastavuuteen.
       Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p> </div>
     </div>
+  </div>
+  </div>
 <div id="Yhteystiedot" class="bg-1"> </div>
   <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
   <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
