--- a/indextoinen.html
+++ b/indextoinen.html
@@ -125,7 +125,7 @@
 </div>
   
 <div id="tietoaminusta" class="bg-1">
-
+<div class="container">
   <div class="row">
     <div class="col-sm-6">
     </div>
