--- a/indextoinen.html
+++ b/indextoinen.html
@@ -128,6 +128,10 @@
 <div class="container">
   <div class="row">
     <div class="col-sm-6">
+        <div class="item">
+         <video width="1200" height="700" autoplay muted>
+  <source src="VID_66720603_154145_421.mp4" type="video/mp4" >
+      </video>
     </div>
     <div class="col-sm-6">
     <h3 class="text-center">TIETOA MINUSTA</h3>
