--- a/indextoinen.html
+++ b/indextoinen.html
@@ -1,186 +1,187 @@
 <!DOCTYPE html>
-<html lang="fi">
-<head>
-  <title>Anina Shuffle</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
-   <link rel="stylesheet" type="text/css" href="stylestoinen.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-  
-</head>
-<body id="Etusivu" data-spy="scroll" data-target=".navbar" data-offset="50">
+	<html lang="fi">
+	<head>
+	  <title>Anina Shuffle</title>
+	  <meta charset="utf-8">
+	  <meta name="viewport" content="width=device-width, initial-scale=1">
+	  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+	  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css">
+	  <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet" type="text/css">
+	   <link rel="stylesheet" type="text/css" href="stylestoinen.css">
+	  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+	  
+	</head>
+	<body id="Etusivu" data-spy="scroll" data-target=".navbar" data-offset="50">
+	
 
-<nav class="navbar navbar-default navbar-fixed-top">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>                        
-      </button>
-      <a class="navbar-brand" href="#Etusivu">Logo</a>
-    </div>
-    <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav navbar-right">
-      <li><a href="indextoinen.html">ETUSIVU</a></li>
-        <li><a href="tunnit.html">TUNNIT</a></li>
-        <li><a href="tietoaminusta.html">TIETOA MINUSTA</a></li>
-        <li><a href="yhteystiedot.html">YHTEYSTIEDOT</a></li>  
-      </ul>
-    </div>
-  </div>
-</nav>
+	<nav class="navbar navbar-default navbar-fixed-top">
+	  <div class="container-fluid">
+	    <div class="navbar-header">
+	      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>
+	        <span class="icon-bar"></span>                        
+	      </button>
+	      <a class="navbar-brand" href="#Etusivu">Logo</a>
+	    </div>
+	    <div class="collapse navbar-collapse" id="myNavbar">
+	      <ul class="nav navbar-nav navbar-right">
+	      <li><a href="indextoinen.html">ETUSIVU</a></li>
+	        <li><a href="tunnit.html">TUNNIT</a></li>
+	        <li><a href="tietoaminusta.html">TIETOA MINUSTA</a></li>
+	        <li><a href="yhteystiedot.html">YHTEYSTIEDOT</a></li>  
+	      </ul>
+	    </div>
+	  </div>
+	</nav>
+	
 
-<div id="myCarousel" class="carousel slide" data-ride="carousel" >
+	<div id="myCarousel" class="carousel slide" data-ride="carousel" >
+	
 
-    <ol class="carousel-indicators">
-      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-      <li data-target="#myCarousel" data-slide-to="1"></li>
-      <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
+	    <ol class="carousel-indicators">
+	      <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+	      <li data-target="#myCarousel" data-slide-to="1"></li>
+	      <li data-target="#myCarousel" data-slide-to="2"></li>
+	    </ol>
+	
 
-    <div class="carousel-inner" role="listbox">
-      <div class="item active">
-          <img src="https://images.unsplash.com/photo-1535525153412-5a42439a210d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
- <div class="carousel-caption">
-          <h3>Haluatko oppia shufflaamaan?</h3>
-          <p>Shuffletunnit Helsingissä ja Vantaalla</p>
-        </div>      
-      </div>
+	    <div class="carousel-inner" role="listbox">
+	      <div class="item active">
+	          <img src="https://images.unsplash.com/photo-1535525153412-5a42439a210d?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	 <div class="carousel-caption">
+	          <h3>Haluatko oppia shufflaamaan?</h3>
+	          <p>Shuffletunnit Helsingissä ja Vantaalla</p>
+	        </div>      
+	      </div>
+	
 
-      <div class="item">
-   <img src="https://images.unsplash.com/photo-1508700929628-666bc8bd84ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
-        <div class="carousel-caption">
-          <h3>ALKEISTUNNIT</h3>
-          <p>"“Minulla ei ollut ollenkaan tanssitaustaa aikaisemmin, joten jännitti tulla ensimmäiselle tunnille. 
-            Kuitenkin jännitys hälveni heti, sillä tunneilla oli rento ja kannustava ilmapiiri. 
-            Opettaja oli selkeä ja porukka kivaa. Löysin vihdoin aikuisiällä harrastuksen! Kiitos Anina”
-</p>
-        </div>      
-      </div>
-      <div class="item">
-      <img src="https://images.unsplash.com/photo-1621976360623-004223992275?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1128&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	      <div class="item">
+	   <img src="https://images.unsplash.com/photo-1508700929628-666bc8bd84ea?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	        <div class="carousel-caption">
+	          <h3>ALKEISTUNNIT</h3>
+	          <p>"“Minulla ei ollut ollenkaan tanssitaustaa aikaisemmin, joten jännitti tulla ensimmäiselle tunnille. 
+	            Kuitenkin jännitys hälveni heti, sillä tunneilla oli rento ja kannustava ilmapiiri. 
+	            Opettaja oli selkeä ja porukka kivaa. Löysin vihdoin aikuisiällä harrastuksen! Kiitos Anina”
+	</p>
+	        </div>      
+	      </div>
+	      <div class="item">
+	      <img src="https://images.unsplash.com/photo-1621976360623-004223992275?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1128&q=80" "class="img-responsive margin" style="width:100%" alt="kuva">
+	
 
-        <div class="carousel-caption">
-          <h3>ALKEISJATKO TUNNIT</h3>
-          <p>"Jatkoin alkeitten jälkeen alkeisjatko tunnille. Edelleen yhtä kivaa kuin alussa. </p>
-           <p> Koreokrafiat vaihtuvat ja pystyvät mielekkäinä! Opettaja on huippu ja tunnit ovat viikon kohokohta!"</p>
-        </div>      
-      </div>
-    </div>
+	        <div class="carousel-caption">
+	          <h3>ALKEISJATKO TUNNIT</h3>
+	          <p>"Jatkoin alkeitten jälkeen alkeisjatko tunnille. Edelleen yhtä kivaa kuin alussa. </p>
+	           <p> Koreokrafiat vaihtuvat ja pystyvät mielekkäinä! Opettaja on huippu ja tunnit ovat viikon kohokohta!"</p>
+	        </div>      
+	      </div>
+	    </div>
+	
 
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-</div>
+	    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+	      <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+	      <span class="sr-only">Previous</span>
+	    </a>
+	    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+	      <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+	      <span class="sr-only">Next</span>
+	    </a>
+	</div>
+	
 
-<div id="Tunnit" class="container text-center">
-  <h3>ANINAN SHUFFLE TUNNIT</h3>
-  <p><em>We love shuffle!</em></p>
-  <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
-  <br>
-  <div class="row">
-    <div class="col-sm-4">
-      <p class="text-center"><strong>ALKEET</strong></p><br>
-      <a href="#demo" data-toggle="collapse">
-        <img src="https://images.unsplash.com/photo-1546427660-eb346c344ba5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo" class="collapse">
-        <p>Shuffletanssin alkeiskurssilla harjoitellaan shuffletanssin
-          perusliikkeitä sekä koreografoita opituista liikkeistä. </p>
-       <p>Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
-      </div>
-    </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>ALKEISJATKO</strong></p><br>
-      <a href="#demo2" data-toggle="collapse">
-        <img src="https://images.unsplash.com/photo-1523450001312-faa4e2e37f0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo2" class="collapse">
-        <p>Shuffletanssin alkeisjatkokurssilla opetellaan uusia liikkeitä ja 
-          harjoitellaan koregrafiota hieman nopeampaan tempoon. </p>
-        <p>Osallistuessasi tunnille sinun tulisi osata Running Man, T-step ja Charleston kertaamatta.</p>
-      </div>
-      </div>
-    <div class="col-sm-4">
-      <p class="text-center"><strong>KESKITASO</strong></p><br>
-      <a href="#demo3" data-toggle="collapse">
-        <img src="https://images.unsplash.com/photo-1592252002485-f269690b2ef1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
-      </a>
-      <div id="demo3" class="collapse">
-        <p>Keskitasolla pärjäät, jos osaat perusaskeleet ilman niiden kertausta ja nopealla temmolla. 
-          Kurssilla käydään läpi uusia askelsarjoja, sekä nopeatempoisempi koreografia.</p>
-      </div>
-    </div>
-  </div>
-</div>
-  
-<div id="tietoaminusta" class="bg-1">
-<div class="container">
-  <div class="row">
-    <div class="col-sm-6">
-        <div class="item">
-         <video width="600" height="350" autoplay muted>
-  <source src="VID_66720603_154145_421.mp4" type="video/mp4" >
-      </video>
-    </div>
-    <div class="col-sm-6">
-    <h3 class="text-center">TIETOA MINUSTA</h3>
-    <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
-      Minulla on laaja urheilutausta ja nautin lajeista, joissa joutuu haastamaan itseään.
-      Oon harrastanut erilaisia tansseja baletista discotanssiin, sekä myös cheerleadingia.
-     Lähivuosina olen keskittynyt treenaamaan aktiivisesti Shuffletanssia ja Brasilialaista jujutsua. 
-      Ensimmäistä kertaa kokeilin shufflea vuonna 2019, ja se oli rakkautta ensi silmäyksellä. Shufflessa ihastuin sen vauhdikkuuteen ja tekniseen haastavuuteen.
-      Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p> </div>
-    </div>
-  </div>
-  </div>
-<div id="Yhteystiedot" class="bg-1"> </div>
-  <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
-  <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
+	<div id="Tunnit" class="container text-center">
+	  <h3>ANINAN SHUFFLE TUNNIT</h3>
+	  <p><em>We love shuffle!</em></p>
+	  <p>Shuffle on vauhdikas tanssityyli, joka on syntynyt eri katutanssien pohjalta kehittyneistä rave- ja klubitansseista. Lajille ominaisinta on sujuva sekä nopeahko jalkatyöskentely sekä erilaiset askelikot, joita voi varioida moneen eri tapaan. Nopeiden jalkaliikkeiden lisäksi shuflleen kuuluvat rytmikkäät käsiliikkeet.</p>
+	  <br>
+	  <div class="row">
+	    <div class="col-sm-4">
+	      <p class="text-center"><strong>ALKEET</strong></p><br>
+	      <a href="#demo" data-toggle="collapse">
+	        <img src="https://images.unsplash.com/photo-1546427660-eb346c344ba5?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
+	      </a>
+	      <div id="demo" class="collapse">
+	        <p>Shuffletanssin alkeiskurssilla harjoitellaan shuffletanssin
+	          perusliikkeitä sekä koreografoita opituista liikkeistä. </p>
+	       <p>Et tarvitse lainkaan aiempaa kokemusta osallistuessasi tälle tunnille.</p>
+	      </div>
+	    </div>
+	    <div class="col-sm-4">
+	      <p class="text-center"><strong>ALKEISJATKO</strong></p><br>
+	      <a href="#demo2" data-toggle="collapse">
+	        <img src="https://images.unsplash.com/photo-1523450001312-faa4e2e37f0f?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
+	      </a>
+	      <div id="demo2" class="collapse">
+	        <p>Shuffletanssin alkeisjatkokurssilla opetellaan uusia liikkeitä ja 
+	          harjoitellaan koregrafiota hieman nopeampaan tempoon. </p>
+	        <p>Osallistuessasi tunnille sinun tulisi osata Running Man, T-step ja Charleston kertaamatta.</p>
+	      </div>
+	      </div>
+	    <div class="col-sm-4">
+	      <p class="text-center"><strong>KESKITASO</strong></p><br>
+	      <a href="#demo3" data-toggle="collapse">
+	        <img src="https://images.unsplash.com/photo-1592252002485-f269690b2ef1?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=387&q=80" class="img-circle person" alt="Random Name" width="255" height="255">
+	      </a>
+	      <div id="demo3" class="collapse">
+	        <p>Keskitasolla pärjäät, jos osaat perusaskeleet ilman niiden kertausta ja nopealla temmolla. 
+	          Kurssilla käydään läpi uusia askelsarjoja, sekä nopeatempoisempi koreografia.</p>
+	      </div>
+	    </div>
+	  </div>
+	</div>
+	  
+	<div id="tietoaminusta" class="bg-1">
+	  <div class="container">
+	    <h3 class="text-center">TIETOA MINUSTA</h3>
+	    <p class="text-center">Moikka! Olen Anina, pirteä ja lempeä tyyppi, joka haluaa jakaa hyvää ja positiivista energiaa. 
+	      Minulla on laaja urheilutausta ja nautin lajeista, joissa joutuu haastamaan itseään.
+	      Oon harrastanut erilaisia tansseja baletista discotanssiin, sekä myös cheerleadingia.
+	     Lähivuosina olen keskittynyt treenaamaan aktiivisesti Shuffletanssia ja Brasilialaista jujutsua. 
+	      Ensimmäistä kertaa kokeilin shufflea vuonna 2019, ja se oli rakkautta ensi silmäyksellä. Shufflessa ihastuin sen vauhdikkuuteen ja tekniseen haastavuuteen.
+	      Shufflea olen opettanut yhden kauden verran ja matka on vasta alussa! </p> </div>
+	<div id="Yhteystiedot" class="bg-1"> </div>
+	  <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
+	  <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
+	
 
-  <div class="row">
-    <div class="col-md-4">
-      <p>Yhteystiedot</p>
-      <p><span class="glyphicon glyphicon-map-marker"></span>Teollisuuskatu 18a, 00510 Helsinki</p>
-      <p><span class="glyphicon glyphicon-phone"></span>Puhelinnumero: 044 981 7413</p>
-      <p><span class="glyphicon glyphicon-envelope"></span>Sähköposti: anina.Ikonen@live.com</p>
-    </div>
-    <div class="col-md-8">
-      <div class="row">
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="Nimi" name="Nimi" placeholder="Nimi" type="text" required>
-        </div>
-        <div class="col-sm-6 form-group">
-          <input class="form-control" id="email" name="email" placeholder="Sähköposti" type="email" required>
-        </div>
-      </div>
-      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
-      <br>
-      <div class="row">
-        <div class="col-md-12 form-group">
-          <button class="btn pull-right" type="submit">Ilmottaudu</button>
-        </div>
-      </div>
-    </div>
-  </div>
+	  <div class="row">
+	    <div class="col-md-4">
+	      <p>Yhteystiedot</p>
+	      <p><span class="glyphicon glyphicon-map-marker"></span>Teollisuuskatu 18a, 00510 Helsinki</p>
+	      <p><span class="glyphicon glyphicon-phone"></span>Puhelinnumero: 044 981 7413</p>
+	      <p><span class="glyphicon glyphicon-envelope"></span>Sähköposti: anina.Ikonen@live.com</p>
+	    </div>
+	    <div class="col-md-8">
+	      <div class="row">
+	        <div class="col-sm-6 form-group">
+	          <input class="form-control" id="Nimi" name="Nimi" placeholder="Nimi" type="text" required>
+	        </div>
+	        <div class="col-sm-6 form-group">
+	          <input class="form-control" id="email" name="email" placeholder="Sähköposti" type="email" required>
+	        </div>
+	      </div>
+	      <textarea class="form-control" id="comments" name="comments" placeholder="Comment" rows="5"></textarea>
+	      <br>
+	      <div class="row">
+	        <div class="col-md-12 form-group">
+	          <button class="btn pull-right" type="submit">Ilmottaudu</button>
+	        </div>
+	      </div>
+	    </div>
+	  </div>
+	
 
-<footer class="text-center">
-  <a class="up-arrow" href="#Etusivu" data-toggle="tooltip" title="TO TOP">
-    <span class="glyphicon glyphicon-chevron-up"></span>
-  </a><br><br>
-  <p> 2021 Anina Luumi Shuffle / Ota yhteyttä anina.ikonen@live.com </p> 
-</footer>
+	<footer class="text-center">
+	  <a class="up-arrow" href="#Etusivu" data-toggle="tooltip" title="TO TOP">
+	    <span class="glyphicon glyphicon-chevron-up"></span>
+	  </a><br><br>
+	  <p> 2021 Anina Luumi Shuffle / Ota yhteyttä anina.ikonen@live.com </p> 
+	</footer>
+	
 
+	
 
-</body>
-</html>
+	</body>
+	</html
