--- a/indextoinen.html
+++ b/indextoinen.html
@@ -144,7 +144,7 @@
 	<div id="Yhteystiedot" class="bg-1"> </div>
 	  <h3 class="text-center">ILMOTTAUDU TUNNILLE</h3>
 	  <p class="text-center"><em>Olisi mahtavaa nähdä sinut tunnilla! </em></p>
-	
+		</div>
 
 	  <div class="row">
 	    <div class="col-md-4">
